[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/weather.tscn" type="PackedScene" id=1]
[ext_resource path="res://Musicas/WhatsApp Image 2023-02-23 at 09.25.28.jpeg" type="Texture" id=2]
[ext_resource path="res://Musicas/gentle-rainfall-16960.wav" type="AudioStream" id=3]
[ext_resource path="res://script_botoes.gd" type="Script" id=4]
[ext_resource path="res://assets/pixil-frame-0.png" type="Texture" id=5]
[ext_resource path="res://assets/pixil-frame-4.png" type="Texture" id=8]
[ext_resource path="res://assets/pixil-frame-2.png" type="Texture" id=9]
[ext_resource path="res://assets/pixil-frame-3.png" type="Texture" id=10]
[ext_resource path="res://assets/pixil-frame-7.png" type="Texture" id=11]
[ext_resource path="res://assets/pixil-frame-5.png" type="Texture" id=12]
[ext_resource path="res://assets/pixil-frame-6.png" type="Texture" id=13]
[ext_resource path="res://assets/pixil-frame-1.png" type="Texture" id=14]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512.5, 300.5 )
scale = Vector2( 0.799219, 0.926563 )
texture = ExtResource( 2 )

[node name="Weather" parent="." instance=ExtResource( 1 )]
wind = 0.3
size = 0.6
rain_darkness = 0.07

[node name="Butao_Opcoes" type="Button" parent="."]
visible = false
margin_left = 190.0
margin_top = 314.0
margin_right = 489.0
margin_bottom = 379.0

[node name="Butao_Start" type="Button" parent="."]
show_behind_parent = true
light_mask = 0
margin_left = 193.0
margin_top = 214.0
margin_right = 489.0
margin_bottom = 282.0

[node name="Audio_chuva" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="cutscene1" type="Sprite" parent="."]
position = Vector2( 513.112, 510 )
scale = Vector2( 1.00173, 1 )
texture = ExtResource( 5 )

[node name="cutscene2" type="Sprite" parent="."]
position = Vector2( 516, 511.05 )
scale = Vector2( 1.00205, 1.00205 )
texture = ExtResource( 14 )

[node name="cutscene3" type="Sprite" parent="."]
position = Vector2( 516.4, 299.5 )
scale = Vector2( 0.999219, 1.00833 )
texture = ExtResource( 9 )

[node name="cutscene4" type="Sprite" parent="."]
position = Vector2( 515.9, 303.516 )
scale = Vector2( 1.00215, 1.01161 )
texture = ExtResource( 10 )

[node name="cutscene5" type="Sprite" parent="."]
position = Vector2( 515.9, 515.3 )
scale = Vector2( 1.0041, 1.00723 )
texture = ExtResource( 8 )

[node name="cutscene6" type="Sprite" parent="."]
position = Vector2( 519.4, 300.016 )
scale = Vector2( 1.00117, 1.00995 )
texture = ExtResource( 12 )

[node name="cutscene7" type="Sprite" parent="."]
position = Vector2( 516.4, 513.3 )
scale = Vector2( 1.00313, 1.00332 )
texture = ExtResource( 13 )

[node name="cutscene8" type="Sprite" parent="."]
position = Vector2( 516.4, 514.3 )
scale = Vector2( 1.00117, 1.00332 )
texture = ExtResource( 11 )

[connection signal="pressed" from="Butao_Opcoes" to="." method="_on_Butao_Opcoes_pressed"]
[connection signal="pressed" from="Butao_Start" to="." method="_on_Butao_Start_pressed"]
